Fixed the layout on iOS (min-width: $site-width-mobile)

--- a/app/assets/stylesheets/_variables.css.scss
+++ b/app/assets/stylesheets/_variables.css.scss
@@ -1,5 +1,8 @@
 $site-width: 762px;
+
 $column-margin: 24px;
 $column-at-one-third: ($site-width - 4 * $column-margin) / 3;
 $column-at-half: ($site-width - 3 * $column-margin) / 2;
 $column-at-full: ($site-width - 2 * $column-margin);
+
+$site-width-mobile: $column-at-half + 2 * $column-margin;
