--- a/app/assets/stylesheets/mainmenu.css.scss
+++ b/app/assets/stylesheets/mainmenu.css.scss
@@ -1,15 +1,11 @@
 @import "_variables.css.scss";
 
-@media (max-width: $site-width) {
-
-}
-
 /**
 * HEADER
 */
 
 body > header {
-	
+
 	position: fixed;
 	background-image: url('/assets/navigationstroke.png');
 	background-repeat: repeat-x;
@@ -17,7 +13,6 @@ body > header {
 	top: 0;
 
 	ul {
-
 		text-align: center;
 		list-style: none;
 		margin: 0;
@@ -28,24 +23,44 @@ body > header {
 		background-position: top center;
 		line-height: 60px;
 		height: 90px;
-
-		li {
-			font-family: 'Oswald', sans-serif;
-			font-size: 13px;
-			padding: 0px 30px;
-			display: inline-block;
-			color: white;
-			text-transform: uppercase;
-		}
-
-		li.current {
-			text-decoration: underline;
-		}
-
-		a, a:visited, a:hover {
-			color: white;
-		}
-
 	}
+
+	li {
+		font-family: 'Oswald', sans-serif;
+		font-size: 13px;
+		padding: 0px 30px;
+		display: inline-block;
+		color: white;
+		text-transform: uppercase;
+	}
+
+	li.current {
+		text-decoration: underline;
+	}
+
+	a, a:visited, a:hover {
+		color: white;
+	}
+
 }
 
+@media (max-width: $site-width) {
+
+	body > header {
+		width: auto;
+		position: relative;
+		background-repeat: repeat;
+		margin-bottom: $column-margin;
+
+		ul {
+			background-image: none;
+			height: auto;
+			line-height: 35px;
+		}
+
+		li {
+			display: list-item;
+		}
+	}
+
+}
